package dk.dtu.cdio3;

/**
 * Main class for the program
 */
public class Game {
    public static void main(String[] args) {
        System.out.println("Hello World");
    }
}
