package dk.dtu.cdio3.objects;

public class Account {
}
