package dk.dtu.cdio3.objects.fields;

public class Field {
}
